<resources>
    <string name="app_name">STAMA</string>
    <string name="username">Email</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>
    <string name="sup">Ajouter un fournisseur</string>
    <string name="list_prod">Produits</string>
    <string name="up_sup">Modifier Fournisseur</string>
    <string name="update">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="prod">Ajouter un produit</string>
</resources>
