<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_field_margin"
        android:textColorHint="@color/grey">

        <EditText
            android:id="@+id/sup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nom du fournissuer"
            android:textColor="@color/orange"
            android:textColorHighlight="@color/grey"
            android:textColorHint="@color/grey" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/update_sup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/buttons_margin"
        android:background="@color/orange"
        android:padding="@dimen/buttons_padding"
        android:text="@string/update"
        android:textColor="@color/background" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/delete_sup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/buttons_margin"
        android:background="@color/orange"
        android:padding="@dimen/buttons_padding"
        android:text="@string/delete"
        android:textColor="@color/background" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/list_prod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/buttons_margin"
        android:layout_marginTop="@dimen/buttons_margin"
        android:background="@color/orange"
        android:padding="@dimen/buttons_padding"
        android:text="@string/list_prod"
        android:textColor="@color/background" />

</LinearLayout>