<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_field_margin"
            android:layout_marginTop="@dimen/text_field_margin"
            android:textColorHint="@color/grey">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColor="@color/orange"
                android:textColorHighlight="@color/grey"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/form_text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_field_margin"
            android:layout_marginTop="@dimen/text_field_margin"
            android:textColorHint="@color/grey">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/orange"
                android:textColorHighlight="@color/grey"
                android:textColorHint="@color/grey" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"
            android:layout_marginTop="@dimen/buttons_margin"
            android:background="@color/orange"
            android:padding="@dimen/buttons_padding"
            android:text="@string/login"
            android:textColor="@color/background" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/tvRegisterLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttons_margin"
            android:background="@color/orange"
            android:padding="@dimen/buttons_padding"
            android:text="@string/signup"
            android:textColor="@color/background" />

</LinearLayout>